--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,1 @@
-MONGODB_URI=mongodb://127.0.0.1:27017/your_db_name
-MONGO_INITDB_ROOT_USERNAME=your_username
-MONGO_INITDB_ROOT_PASSWORD=your_password
+MONGODB_URI=mongodb+srv://<username>:<password>@<your_connection_uri>.mongodb.net/<your_database>?retryWrites=true&w=majority
